# simple_camera_windows

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
example/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart  main_back.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  RCa01000  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h
lib/: simple_camera_windows.dart  simple_camera_windows_method_channel.dart  simple_camera_windows_platform_interface.dart
lib/backup/: simple_camera_windows.dart  simple_camera_windows_method_channel.dart  simple_camera_windows_platform_interface.dart
linux/: CMakeLists.txt  simple_camera_windows_plugin.cc  simple_camera_windows_plugin_private.h
linux/include/simple_camera_windows/: simple_camera_windows_plugin.h
linux/test/: simple_camera_windows_plugin_test.cc
test/: simple_camera_windows_method_channel_test.dart  simple_camera_windows_test.dart
windows/: CMakeLists.txt  simple_camera_windows_plugin.cpp  simple_camera_windows_plugin.h  simple_camera_windows_plugin_c_api.cpp
windows/cmake/: FindOpenCV.cmake.txt
windows/include/simple_camera_windows/: simple_camera_windows_plugin_c_api.h
windows/test/: simple_camera_windows_plugin_test.cpp
